metrics/jaeger_virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: jaeger-virtualservice
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - default/medisupply-gateway   # usa el gateway que ya tienes
  http:
  - match:
    - uri:
        prefix: /jaeger
    rewrite:
        uri: /
    route:
    - destination:
        host: jaeger.istio-system.svc.cluster.local
        port:
          number: 16686
